--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,19 @@
 .App-intro {
   font-size: large;
 }
-
+ 
+.blue {
+	color:blue;
+} 
+.red {
+	color:red;
+}
+.green {
+	color:green;
+}
+.black {
+	color: black;
+}
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
