--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  transition: all 0.5s ease-out;
 }
 
 .App-logo {
@@ -20,6 +21,30 @@
 
 .App-intro {
   font-size: large;
+}
+ 
+.blue {
+	color:blue;
+} 
+.red {
+	color:red;
+}
+.green {
+	color:green;
+}
+.black {
+	color: black;
+}
+
+.capitalize {
+  text-transform: capitalize;
+  transform: rotate(90deg);
+}
+
+.decorate {
+  text-decoration: underline;
+  background: red;
+  font-size: 25px;
 }
 
 @keyframes App-logo-spin {
