--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   list-style-type: none;
 }
 .App-logo {
-  animation: App-logo-spin infinite 0.7s linear;
+  animation: App-logo-spin infinite 0.8s linear;
   height: 80px;
 }
 
@@ -26,7 +26,7 @@
   font-size: large;
 }
 .avatar {
-	 background: #ddd;
+	 background: #fff;
 	 border: thin solid maroon;
 	 border-radius: 50%;
 	 padding: 15px;
